@@ -54,19 +54,11 @@ NEON_BASE_SOURCES = ne_request.c ne_session.c 	\
 	ne_md5.c ne_utils.c    			\
 	ne_auth.c 				\
 	ne_redirect.c		\
-	ne_compress.c	\
-	ne_openssl.c
+	ne_compress.c
 
 NEON_DAV_SOURCES = \
 	ne_207.c ne_xml.c \
 	ne_props.c ne_locks.c ne_xmlreq.c
-
-if HAVE_SSL
-NEON_SSL_SOURCES = ne_openssl.c
-else
-NEON_SSL_SOURCES = ne_stubssl.c
-endif
-
 
 NEON_EXTRA_SOURCES = ne_acl.c ne_gnomevfs.c
 
